fix some issue on mobile version

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -115,3 +115,33 @@
   background-color: #56548C;
 }
 /* end colors */
+
+/* start nav */
+nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 56px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 24px;
+  color: #9F9F9F;
+}
+nav .active {
+  color: #f6b100;
+}
+nav .explore {
+  background-color: #f6b100;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  top: -20px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* end nav */
